@@ -32,6 +32,9 @@
                     <img src="images/banners/.webp">
                 </div> 
                 -->
+                <div class="大讲演时代 banner-button">
+                    <img src="images/banners/The_Era_of_Great_Speech_Banner.webp">
+                </div>
                 <div class="回到融雪处 banner-button">
                     <img src="images/banners/Another_Spring_Thaw_Banner.webp">
                 </div>
